<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.github.adam6806.battletanks.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignEnd="@+id/listView1"/>

    <Button
        android:id="@+id/turnOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:onClick="on"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/turnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:onClick="off"
        android:layout_below="@+id/turnOn"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/paired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/List"
        android:onClick="list"
        android:layout_below="@+id/search"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Find"
        android:onClick="find"
        android:layout_below="@+id/turnOff"
        android:layout_alignParentStart="true"/>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/search"
        android:layout_below="@+id/text">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:id="@+id/linearLayout">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:id="@+id/linearLayout2">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Command Sent: "
        android:id="@+id/commandText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/paired"
        android:layout_toLeftOf="@+id/listView1"
        android:textSize="20sp"/>

</RelativeLayout>